2012-07-21  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_impl.h (dt_module): New dm_ctdata_data member,
	holding dynamically-allocated decompressed CTF data.
	* libdtrace/dt_module.c: Include zlib.
	(GZCHUNKSIZE): New macro, arbitrarily set at 512Kb.
	(dt_ctf_uncompress): New function.
	(dt_module_load): Call it when CTF sections are present.  Do not
	try to pass the uninitialized symbol and string tables to
	ctf_bufopen().  Log CTF errors in the debugging stream.
	(dt_module_getctf): Kernel modules with CTF with a parent of
	"PARENT" should use dtrace_ctf instead.
	(dt_module_unload): Free dm_ctdata_data.
	(dt_kern_module_init): Consider the dtrace_ctf module to be
	built-in.

	* libdtrace/dt_open.c (_dtrace_globals): Fix the CTF types
	for curthread, getmajor(), getminor(), mutex_owned(),
	mutex_owner(), mutex_type_adaptive(), mutex_type_spin(),
	rw_iswriter(), rw_read_held(), and rw_write_held().

	* INCOMPATIBILITIES: Document the permanent unavailability of the
	msgdsize() and msgsize() subroutines.

	* Makeconfig: Do not generate coverage datafiles for configure-
	test compilations.

2012-07-19  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/Build (errno.d): Pass errno.h through the preprocessor
	before feeding it to mkerrno.sh: do not transform \n into linefeeds.
	* libdtrace/mkerrno.sh: Rewrite, using awk to handle errnos defined in
	terms of other errnos.

2012-07-18  Nick Alcock  <nick.alcock@oracle.com>

	* libdtrace/dt_module.c (dt_module_load): Modules with no CTF data
	may have a one-byte dummy CTF section.

2012-07-03  Nick Alcock  <nick.alcock@oracle.com>

	The great dt_module revamp.

	* libdtrace/dt_symtab.h: New file, symbol table management.
	* libdtrace/dt_symtab.c: New file, implementation thereof.
	* libdtrace/Build: Add it.

	* libdtrace/dt_link.c (dt_symtab_lookup): Rename to...
	(dt_elf_symtab_lookup): ... this less confusing name.
	(process_obj): Adjust accordingly.

	* libdtrace/dt_string.c (strrstr): New function.