@@ -1,5 +1,3 @@
-/* @@xfail: needs CTF */
-
 BEGIN {
 	trace(curthread);
 	exit(0);
