@@ -1,2 +1,3 @@
-We don't know what results this will emit, but it should surely
-emit more than none. (Capture when working.)
+
+-- @@stderr --
+dtrace: script 'test/demo/script/syscall.d' matched 296 probes
