@@ -1,2 +1,2 @@
 -- @@stderr --
-dtrace: failed to compile script test/unittest/enum/err.D_UNKNOWN.RepeatIdentifiers.d: [D_UNKNOWN] line 45: failed to define enumerator 'GREEN': Limit on number of dynamic type members reached
+dtrace: failed to compile script test/unittest/enum/err.D_UNKNOWN.RepeatIdentifiers.d: [D_UNKNOWN] line 45: failed to define enumerator 'GREEN': Duplicate member name definition
