@@ -1,2 +1,2 @@
 -- @@stderr --
-dtrace: failed to compile script test/unittest/offsetof/err.D_UNKNOWN.OffsetofNULL.d: [D_UNKNOWN] line 47: failed to determine offset of NULL: Feature not supported
+dtrace: failed to compile script test/unittest/offsetof/err.D_UNKNOWN.OffsetofNULL.d: [D_UNKNOWN] line 47: failed to determine offset of NULL: Invalid member name
